--- a/contact.html
+++ b/contact.html
@@ -27,11 +27,12 @@
 		<div id="mainCont">
 
 			<!-- Header Starts here.-->
+			
 			<div id="headContainer">
 				
 					<div id="logo" >
 
-					<a href="index.html"><img src="images/d.png" alt="Decoded Computer Solutions" width=></a>
+					<a href="index.html"><img src="images/d.png" alt="Decoded Computer Solutions" width="900" height="200"></a>
 						
 					</div>
 
