--- a/index.html
+++ b/index.html
@@ -20,8 +20,7 @@
 				
 					<div id="logo" >
 
-					<a href="index.html"><img src="images/d.png" alt="Decoded Computer Solutions" width=></a>
-						
+					<a href="index.html"><img src="images/d.png" alt="Decoded Computer Solutions" width="900" height="200"></a>
 					</div>
 
 					<div id="nav">
